re PR c++/55058 (Unexpected invalid type conversion error)

PR c++/55058
	* pt.c (tsubst): Keep the quals when looking through a typedef.

From-SVN: r194282